--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "normalize.css": "~3.0.1",
     "jquery": "~2.1.1",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "handlebars": "~2.0.0",
+    "moment": "~2.8.2"
   }
 }
