--- a/bower.json
+++ b/bower.json
@@ -9,9 +9,8 @@
   "private": true,
   "dependencies": {
     "normalize.css": "~3.0.1",
-    "jquery": "~2.1.1",
-    "lodash": "~2.4.1",
-    "handlebars": "~2.0.0",
-    "moment": "~2.8.2"
+    "moment": "~2.8.2",
+    "angular-socket-io": "~0.6.0",
+    "angular": "~1.2.23"
   }
 }
