--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
   "window": {
     "title": "freewill",
     "icon": "./app/assets/images/freewill.png",
-    "toolbar": false,
+    "toolbar": true,
     "frame": true,
     "width": 1024,
     "height": 768,
-    "position": "mouse",
-    "min_width": 1024,
-    "min_height": 768
+    "position": "mouse"
   },
   "webkit": {
     "plugin": true
