--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "normalize.css": "~3.0.1",
     "angular-socket-io": "~0.6.0",
-    "angular": "~1.2.23"
+    "angular": "~1.2.23",
+    "mousetrap": "~1.4.6"
   }
 }
