--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "window": {
     "title": "freewill",
     "icon": "./app/assets/images/freewill.png",
-    "toolbar": false,
+    "toolbar": true,
     "frame": true,
     "width": 1024,
     "height": 768,
